--- a/index.css
+++ b/index.css
@@ -16,20 +16,22 @@
 body {
   color: var(--Dark-grey);
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
   font-weight: 400;
   font-size: 15px;
   font-family: "Poppins", sans-serif;
+  margin: 1rem 0px;
 }
 .main-container {
   width: 100%;
   min-width: 375px;
   padding: 1rem 2.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.intro-heading{
-font-size: 1.5rem;
+.intro-heading {
+  font-size: 1.5rem;
 }
 .intro-heading-light {
   color: var(--grey);
@@ -44,9 +46,9 @@ font-size: 1.5rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin: 3rem 0rem;
+  margin: 1.5rem 0rem;
 }
-.intro-section{
+.intro-section {
   text-align: center;
 }
 .card-section {
@@ -58,27 +60,27 @@ font-size: 1.5rem;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  box-shadow: 1px 4px 16px var(--Grey);
+  box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.08);
   gap: 1rem;
 }
-.card-supervisor{
+.card-supervisor {
   border-top-color: var(--Cyan);
 }
-.card-team-builder{
+.card-team-builder {
   border-top-color: var(--Red);
 }
-.card-karma{
+.card-karma {
   border-top-color: var(--Orange);
 }
-.card-calculator{
+.card-calculator {
   border-top-color: var(--Blue);
 }
-.image-container{
+.image-container {
   align-self: flex-end;
   width: 50px;
   margin: 1rem 0px;
- 
-  img{
+
+  img {
     width: 100%;
   }
 }
@@ -88,4 +90,29 @@ font-size: 1.5rem;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+@media (min-width: 500px) {
+  .intro-section {
+    max-width: 500px;
+  }
+  .intro-heading{
+    font-size: 2rem;
+  }
+  .card-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+  .card-supervisor {
+    grid-row: 2/4;
+  }
+  .card-team-builder {
+    grid-row: 1/3;
+  }
+  .card-karma {
+    grid-row: 3/5;
+  }
+  .card-calculator {
+    grid-row: 2/4;
+  }
 }
